Update to new lifecycle logic and avoid redundant plugin recomputation